syntax = "proto3";
import "google/protobuf/empty.proto";
import "query.proto";

option csharp_namespace = "SchoolManagementSystemAPI.Services.General";

service GrpcDiscussion {
  rpc GetAllDiscussion (waheedianho.protobuf.types.Query) returns (DiscussionGrpcList);
  rpc CreateDiscussion (DiscussionDtoGrpc) returns (google.protobuf.Empty);
  rpc GetDiscussionById (DiscussionId) returns (DiscussionGrpc);
  rpc DeleteDiscussion (DiscussionId) returns (google.protobuf.Empty);
}

message DiscussionGrpcList {
  repeated DiscussionGrpc DiscussionGrpc = 1;
}

message DiscussionId {
  string Id = 1;
}

message DiscussionDtoGrpc {
  string StudentId = 1;
  string Message = 2;
  string DiscussionDisscusionId = 3;
  string LessonId = 4;
  string DiscussionDateTime = 5; 
  int32 GradeSubjectGradeNumber = 6;
  string GradeSubjectSubjectTitle = 7;
}

message DiscussionGrpc {
  string DisscusionId = 1;
  string StudentId = 2;
  string Message = 3;
  string DiscussionDisscusionId = 4;
  string LessonId = 5;
  string DiscussionDateTime = 6; 
  int32 GradeSubjectGradeNumber = 7;
  string GradeSubjectSubjectTitle = 8;
}